# MTM_Final_Project_20

./: CMakeLists.txt  Calculator.cpp  Calculator.h  Edge.cpp  Edge.h  Gcalc.cpp  Gcalc.h  Graph.cpp  Graph.h  README.md  Vertex.cpp  Vertex.h  main_tests.cpp
